<resources>
    <string name="app_name">Spotter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- App bar strings -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Nav drawer strings -->

    <string-array name="nav_drawer_labels">
        <item>Workout History</item>
        <item>Add New Exercise</item>
        <item>Create New Program</item>
        <item>My Programs</item>
        <item>Exercise Library</item>

    </string-array>

    <!-- List Workouts Strings -->
    <string name="user_greeting">Hi, Justin</string>

    <string name="workout_name">Heavy Chest</string>
    <string name="workout_date">Sunday, March 13, 2016</string>
    <string name="workout_start_time">Started at 8:03am</string>
    <string name="list_workouts_program_name">Size Building</string>

    <!-- Exercise strings -->

    <string name="hint_new_exercise_name">Exercise name</string>
    <string name="hint_new_exercise_type">Select an exercise type</string>
    <string name="hint_new_exercise_muscle_group">Select a target muscle group</string>


    <string-array name="exercise_type_values">
        <item>reps</item>
    </string-array>

    <string-array name="muscle_group_values">
        <item>chest</item>
        <item>back</item>
        <item>shoulders</item>
        <item>biceps</item>
        <item>triceps</item>
        <item>legs</item>
        <item>abdominals</item>
    </string-array>
    <string name="title_activity_new_exercise">New Exercise</string>
    <string name="title_activity_new_program">New Program</string>

    <!-- Program strings -->

    <string name="hint_new_program_name">Program name</string>
    <string name="hint_new_program_description">What is the focus of this program?</string>
    <string name="title_activity_list_programs">My Programs</string>
    <string name="title_activity_view_program">View Program</string>
    <string name="title_activity_list_exercises">Exercise Library</string>
    <string name="title_activity_new_program_day">New Program Day</string>

    <!-- Program day strings -->

    <string name="button_build_new_program_day">Build New Program Day</string>

    <string name="hint_new_program_day_name">Program day name</string>
    <string name="program_day_helper_message">It\'s a good idea to use a
    name that describes what you\'ll be working on this day.</string>
    <string name="button_create_program_day">Create Program Day</string>

</resources>
