<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.spotterapp.android.spotter.activities.NewProgramDay"
    android:orientation="vertical">

    <EditText
        android:id="@+id/program_day_name_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new_program_day_name"/>

    <TextView
        android:id="@+id/program_day_name_helper_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/program_day_helper_message"/>

    <Button
        android:id="@+id/button_create_program_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:textColor="@android:color/white"
        android:background="#f45249"
        android:text="@string/button_create_program_day"/>

</LinearLayout>
