<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="4sp">



    <LinearLayout
        android:id="@+id/workout_card_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="#f45249">

        <TextView
            android:id="@+id/list_workouts_program_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_workouts_program_name"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            />
        <TextView
            android:id="@+id/list_workouts_workout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workout_name"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:paddingBottom="48dp"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/list_workouts_workout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workout_date"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/list_workouts_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/workout_start_time"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

</android.support.v7.widget.CardView>