<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="io.spotterapp.android.spotter.NewExercise">

    <EditText
        android:id="@+id/exercise_name_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new_exercise_name"
        android:maxLines="1"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select an exercise type"
        android:layout_marginBottom="8dp"/>
    <Spinner
        android:id="@+id/exercise_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/hint_new_exercise_type"
        android:layout_marginBottom="16dp"></Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select a target muscle group"
        android:layout_marginBottom="8dp"/>
    <Spinner
        android:id="@+id/exercise_muscle_group_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/hint_new_exercise_muscle_group"
        android:layout_marginBottom="16dp"></Spinner>

    <TextView
        android:id="@+id/duplicate_exercise_error_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_new_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:textColor="@android:color/white"
        android:background="#f45249"
        android:text="Save Exercise"
        android:onClick="createExercise"/>

</LinearLayout>
